--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,61 @@ body {
   background-color: #fffbf7;
 }
 
+.header {
+  margin: 40px 20px 0 20px;
+  font-size: 0;
+  line-height: 45px;
+  height: 45px;
+  font-family: sans-serif;
+
+}
+
+li {
+  display: inline;
+  margin: 0 25px;
+}
+
+.header >* {
+  display: inline-block;
+  font-size: 16px;
+  vertical-align: middle;
+  height: 100%;
+  line-height: 45px;
+}
+
+.logo {
+  width: 15%;
+}
+
+.navbar {
+  width: 70%;
+  text-align: left;
+  color: #025157;
+
+}
+
+.actions {
+  width: 15%;
+  text-align: left;
+  font-size: 14px;
+}
+
+.actions > *{
+  margin-left: 10px;
+  margin-right: 10px;
+}
+
+.actions a {
+  color: #67b54b;
+}
+
+.actions button {
+  color: white;
+  background-color: #67b54b;
+  padding-left: 14px;
+  padding-right: 14px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border: 0;
+  border-radius: 5px;
+}
