--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,23 @@
+body {
+  background-color: #fffbf7;
+  /*background-image: url('https://st.depositphotos.com/1597597/2376/v/600/depositphotos_23765751-stock-illustration-leaf-pattern.jpg');*/
+  margin: 0;
+}
+
 h1 {
   color: rgba(61, 61, 150, 0.849);
+  text-align: center;
+  margin-top: 100px;
 }
 
 h2 {
-  color: #46484c;
+  color: #3e60a5;
 }
 
 p {
   color: #8b8b8bcc;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
 }
 
 button {
@@ -15,22 +25,22 @@ button {
   background-color: #025157;
 }
 
-body {
-  background-color: #fffbf7;
+.fixed-header {
+  position: fixed;
+  z-index: 2;
+  background-color: white;
+  top: 0;
+  left: 0;
+  right: 0;
 }
 
 .header {
-  margin: 40px 20px 0 20px;
+  margin: 40px 20px 40px 20px;
   font-size: 0;
   line-height: 45px;
   height: 45px;
   font-family: sans-serif;
 
-}
-
-li {
-  display: inline;
-  margin: 0 25px;
 }
 
 .header >* {
@@ -41,13 +51,21 @@ li {
   line-height: 45px;
 }
 
+li {
+  display: inline;
+  margin: 0 25px;
+}
+
+
+
 .logo {
   width: 15%;
 }
 
 .navbar {
+  margin-bottom: 40px;
   width: 70%;
-  text-align: left;
+  text-align: center;
   color: #025157;
 
 }
@@ -77,3 +95,218 @@ li {
   border: 0;
   border-radius: 5px;
 }
+
+.promo-section {
+  display: flex;
+  width: 70%;
+  margin: 100px auto;
+
+}
+
+
+
+.publish h3 {
+  font-family: "Alegreya", serif;
+  font-size: 40px;
+  line-height: 48px;
+  color: #025157;
+}
+
+.publish > p {
+  font-size: 16px;
+  color: #343434;
+  line-height: 1.5;
+  margin-bottom: 20px;
+}
+
+.publish > form {
+  display: flex;
+ 
+}
+
+.publish > form p {
+  color: #025157;
+  margin-right: 18px;
+}
+
+.publish {
+  margin-left: 50px;
+}
+
+.explanatory-video {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.explanatory-video img {
+  width: 120px;
+  margin-top: 10px;
+}
+
+
+.signup {
+  width: 400px;
+  font: normal bold 12px Verdana, Arial;
+}
+
+.signup label {
+  display: inline-block;
+  width: 150px;
+}
+
+.signup input {
+  display: inline-block;
+  width: 200px;
+  margin-bottom: 5px;
+}
+
+
+
+
+.postwork {
+  background-color: #a1d683;
+  padding: 5% 15%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  
+  
+}
+
+.postwork .overview {
+  flex: 2;
+  padding-right: 100px;
+  
+}
+
+.postwork .overview img {
+  width: 500px;
+  max-width: 100%;
+}
+
+
+.postwork .overview h2 {
+  font-family: "Alegreya", serif;
+  font-size: 51px;
+  line-height: 61px;
+  color: #025157;
+}
+
+.postwork .overview p {
+  color: #343434;
+  font-size: 18px;
+  line-height: 1.5;
+  margin-bottom: 1rem;
+}
+
+.postwork .overview button {
+  font-size: 14px;
+  padding: 12px;
+  border-radius: 8px;
+  height: 45px;
+  font-weight: 600;
+  margin-left: 0;
+}
+
+.postwork .study-cases {
+  position: static;
+  flex: 1;
+  padding-right: 10px;
+  flex-flow: column;
+  background-color: white;
+  border-radius: 8px;
+  padding: 0;
+}
+
+.postwork .study-cases figure {
+  margin-top: 0;
+  margin-left: 0;
+  margin-bottom: 0;
+  width: 100%;
+}
+
+.postwork .study-cases .worker img {
+  width: 100%;
+  max-height: 16vw;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  
+}
+
+.postwork .study-cases .company {
+  z-index: 1;
+  position: relative;
+  bottom: 80px;
+  right: -170px;
+  width: 100px;
+  height: 100px;
+  background-color: #f9da73;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.postwork .study-cases .company img {
+  max-width: 75%;
+}
+
+.postwork .study-cases .description{
+  position: relative;
+  bottom: 80px;
+  margin-top: 0;
+  margin-left: 20px;
+  margin-top: 20px;
+  
+}
+
+
+
+.postwork .study-cases .description h4 {
+  color: #025157;
+  font-size: 18px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 12px;
+  
+}
+
+.postwork .study-cases .description h3 {
+  font-size: 25px;
+  font-weight: 400;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+
+.postwork .study-cases .result {
+  position: relative;
+  bottom: 30px;
+  display: flex;
+  align-items: center;
+  color: #828282;
+}
+
+.postwork .study-cases .result img {
+  width: 26px;
+  margin-right: 20px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+}
+
+.postwork .study-cases .result p {
+  margin-top: 0;
+}
+
+.postwork .study-cases button {
+  display: block;
+  margin: 40px 0 40px 0;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 12px 20px;
+  width: 90%;
+  margin-left: 15px;
+  margin-right: 20px;
+}
+
