--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #fffbf7;
+  background-color: #adaba8;
   /*background-image: url('https://st.depositphotos.com/1597597/2376/v/600/depositphotos_23765751-stock-illustration-leaf-pattern.jpg');*/
   margin: 0;
  
@@ -60,13 +60,29 @@ li {
   width: 15%;
 }
 
-.navbar {
+/* .navbar {
   margin-bottom: 40px;
   width: 70%;
   text-align: center;
   color: #025157;
 
+} */
+
+.carousel-inner {
+  margin: 0 auto;
+  height: 600px;
+  
 }
+.col-sm-6 {
+  margin-top: 50px;
+}
+
+.jumbotron h1,a {
+  color: #025157;
+}
+
+
+
 
 .actions {
   width: 15%;
@@ -142,10 +158,11 @@ li {
   margin-top: 10px;
 }
 
-
+/*
 .signup {
   width: 400px;
   font: normal bold 12px Verdana, Arial;
+  
 }
 
 .signup label {
@@ -158,7 +175,7 @@ li {
   width: 200px;
   margin-bottom: 5px;
 }
-
+*/
 
 .features {
   /*display: grid;*/
@@ -468,3 +485,92 @@ li {
   margin-left: 1em;
   font-weight: 600;
 }
+
+
+
+
+
+
+
+/** dispositivos móviles en vista viewport (vertical) */
+@media (max-width: 575px) {
+  .navbar , .actions {
+    display: none;
+  }
+  h1 {
+    font-size: 25px;
+    margin-top: 60px;
+  }
+
+  .header{
+   margin: 10px 20px 10px 20px;
+   
+  }
+
+  .banner > img {
+    width: 100%;
+  }
+
+  .signup {
+    width: 400px;
+    font: normal bold 12px Verdana, Arial;
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .signup label {
+    width: 150px;
+  }
+  
+  .signup input {
+    width: 200px;
+    margin-bottom: 5px;
+  }
+
+  .promo-section {
+    flex-direction: column;
+    max-width: 90%;
+  }
+
+  .explanatory-video > video {
+    width: 100%;
+  }
+
+  .publish {
+    margin-top: 10px;
+
+  }
+  
+  .publish > h3 {
+    font-size: 25px;
+    line-height: 1.2;
+  }
+
+  .features {
+    grid-template: repeat(4, 1fr) / 1fr;
+    
+  }
+  
+
+}
+
+/** dispositivos pequeños en vista landscape (horizontal) */
+@media (min-width: 576px) and (max-width: 767px) {
+  
+}
+
+/** dispositivos medianos (tablets) */
+@media (min-width: 768px) and (max-width: 991px) {
+  
+}
+
+/** dispositivos grandes (desktops) */
+@media (min-width: 992px) and (max-width: 1199px) {
+  
+}
+
+/** dispositivos extra grandes (monitores grandes, tvs) */
+@media (min-width: 1200px) {
+  
+}
+
