--- a/styles.css
+++ b/styles.css
@@ -177,13 +177,13 @@ li {
 }
 */
 
-.features {
+/*.features {
   /*display: grid;*/
   /*grid-template-columns: 300px 300px;*/
   /*grid-template-columns: repeat(2,300px);*/
   /*grid-template-columns: 500px 1fr;*/
   /*grid-template-columns: 1fr 1fr;*/
-}
+/*}*/
 
 .features {
   display: grid;
